--- a/ImageDownloader/ImageDownloader.Cli/ImageDownloader.Cli.csproj
+++ b/ImageDownloader/ImageDownloader.Cli/ImageDownloader.Cli.csproj
@@ -3,7 +3,18 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <StartupObject>ImageDownloader.Cli.Program</StartupObject>
+    <Authors>Pavel Vishnyakov</Authors>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentCommandLineParser-netstandard" Version="1.4.3.13" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ImageDownloader\ImageDownloader.csproj" />
