--- a/ImageDownloader/ImageDownloader/ImageDownloader.csproj
+++ b/ImageDownloader/ImageDownloader/ImageDownloader.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Pavel Vishnyakov</Authors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
+  </ItemGroup>
 
 </Project>
