--- a/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
+++ b/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ImageDownloader\ImageDownloader.csproj" />
+    <ProjectReference Include="..\ImageDownloader\ImageImporter.csproj" />
   </ItemGroup>
 
   <ItemGroup>
