--- a/ImageDownloader/ImageDownloader/ImageDownloader.csproj
+++ b/ImageDownloader/ImageDownloader/ImageDownloader.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MetadataExtractor" Version="2.0.0" />
+    <PackageReference Include="MetadataExtractor" Version="2.2.0" />
+    <PackageReference Include="ShellProgressBar" Version="4.3.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
   </ItemGroup>
 
