--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Build DotNET35
       run: |
         cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-        .\MSBuild.exe $env:GITHUB_WORKSPACE\ImageDownloader\ImageImporter.sln
+        .\MSBuild.exe $Env:GITHUB_WORKSPACE\ImageDownloader\ImageImporter.sln
