adjust path to solution file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
       run: |
         dir .        
         cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-        .\MSBuild.exe $Env:GITHUB_WORKSPACE\..\ImageDownloader\ImageImporter.sln /t:Compile /p:Configuration=Release
+        .\MSBuild.exe $Env:GITHUB_WORKSPACE\ImageDownloader\ImageDownloader.sln /t:Compile /p:Configuration=Release
