Update build-pipeline.yml for Azure Pipelines

--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -33,3 +33,12 @@ steps:
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: drop
+
+    - task: GitHubRelease@1
+      inputs:
+        gitHubConnection: 'github.com_neurohunter'
+        repositoryName: '$(Build.Repository.Name)'
+        action: 'create'
+        target: '$(Build.SourceVersion)'
+        tagSource: 'gitTag'
+        addChangeLog: false
