Update build-pipeline.yml for Azure Pipelines

--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -13,6 +13,10 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  MajorVersion: 1
+  MinorVersion: 0
+  InitialReleaseTagNumber: 1
+  IncrementReleaseTagNumber: $[counter(variables['InitialReleaseTagNumber'], 0)]
 
 steps:
 - task: NuGetToolInstaller@1
@@ -42,3 +46,4 @@ steps:
     target: '$(Build.SourceVersion)'
     tagSource: 'gitTag'
     addChangeLog: false
+    tagPattern: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
