Update build-pipeline.yml for Azure Pipelines

--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -46,3 +46,4 @@ steps:
     target: '$(Build.SourceVersion)'
     addChangeLog: false
     tagPattern: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
+    tag: '$(tagName)'
