--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -45,5 +45,4 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     addChangeLog: false
-    tagPattern: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
-    tag: '$(tagName)'
+    tag: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
