--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -45,4 +45,13 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     addChangeLog: false
+    tagSource: userSpecifiedTag
     tag: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
+
+- task: GithubRelease@0 
+  displayName: 'Create GitHub Release'      
+  inputs:
+    gitHubConnection: 'github.com_neurohunter'
+    repositoryName: '$(Build.Repository.Name)'
+    tagSource: manual
+    tag: $(Build.BuildNumber)   
