Update build-pipeline.yml for Azure Pipelines

--- a/.azure/workflows/build-pipeline.yml
+++ b/.azure/workflows/build-pipeline.yml
@@ -39,6 +39,7 @@ steps:
     artifactName: drop
 
 - task: GitHubRelease@1
+  displayName: 'GitHub Release'
   inputs:
     gitHubConnection: 'github.com_neurohunter'
     repositoryName: '$(Build.Repository.Name)'
@@ -47,11 +48,3 @@ steps:
     addChangeLog: false
     tagSource: userSpecifiedTag
     tag: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
-
-- task: GithubRelease@0 
-  displayName: 'Create GitHub Release'      
-  inputs:
-    gitHubConnection: 'github.com_neurohunter'
-    repositoryName: '$(Build.Repository.Name)'
-    tagSource: manual
-    tag: $(Build.BuildNumber)   
