--- a/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
+++ b/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
@@ -20,15 +20,16 @@
     <None Update="TestData\ConfigurationProvider\correct.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestData\ConfigurationProvider\incomplete.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="TestData\ConfigurationProvider\incorrect_path.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\ConfigurationProvider\malformed.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestData\ImageImporter\" />
   </ItemGroup>
 
 </Project>
