--- a/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
+++ b/ImageDownloader/ImageDownloader.Tests/ImageImporter.Tests.csproj
@@ -26,10 +26,34 @@
     <None Update="TestData\ConfigurationProvider\malformed.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\ImageImporter\Configs\config-all.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Configs\config-misc.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Configs\config-nonraw.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Configs\config-raw.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Configs\config-video.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Input\2016-02-27 10.46.01.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Input\IMG_2584.heic">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ImageImporter\Input\IMG_5283.CR2">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TestData\ImageImporter\" />
+    <Folder Include="TestData\ImageImporter\Input\" />
   </ItemGroup>
 
 </Project>
