--- a/workflows/azure/create-release.yml
+++ b/workflows/azure/create-release.yml
@@ -49,6 +49,23 @@ steps:
       
       Get-ChildItem $(Build.ArtifactStagingDirectory)
     errorActionPreference: 'silentlyContinue'
+    
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+      Get-ChildItem $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+    errorActionPreference: 'silentlyContinue'
 
 - task: GitHubRelease@1
   displayName: 'GitHub Release'
