--- a/workflows/azure/create-release.yml
+++ b/workflows/azure/create-release.yml
@@ -37,6 +37,7 @@ steps:
     configuration: '$(buildConfiguration)'
 
 - task: CopyFiles@2
+  enabled: false
   inputs:
     sourceFolder: '$(Build.SourcesDirectory)'
     contents: '**/$(BuildConfiguration)/**/?(*.exe|*.dll|*.pdb)'
