--- a/workflows/azure/create-release.yml
+++ b/workflows/azure/create-release.yml
@@ -77,5 +77,5 @@ steps:
     target: '$(Build.SourceVersion)'
     addChangeLog: false
     tagSource: userSpecifiedTag
-    tag: v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
+    tag: v.$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)
     assets: '$(Build.ArtifactStagingDirectory)/$(projectName)_v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber).zip'
