--- a/workflows/azure/build-only.yml
+++ b/workflows/azure/build-only.yml
@@ -24,6 +24,8 @@ steps:
     version: '2.2.x'
     
 - task: NuGetToolInstaller@0
+  inputs:
+    versionSpec: '4.4.1'
 
 - task: NuGetCommand@2
   inputs:
