--- a/workflows/azure/create-release.yml
+++ b/workflows/azure/create-release.yml
@@ -62,7 +62,7 @@ steps:
     
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)/ImageDownloader/ImageDownloader.CLi.Framework/bin/Release'
+    rootFolderOrFile: '$(Build.BinariesDirectory)/ImageImporter/ImageImporter.CLi.Framework/bin/Release/netcore3.1'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.BinariesDirectory)/$(projectName)_v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber).zip'
