--- a/workflows/github/build-solution.yml
+++ b/workflows/github/build-solution.yml
@@ -20,9 +20,9 @@ jobs:
       uses: warrenbuckley/Setup-Nuget@v1
       
     - name: Nuget Restore
-      run: nuget restore $ENv:GITHUB_WORKSPACE\ImageDownloader\ImageImporter.sln
+      run: nuget restore $ENv:GITHUB_WORKSPACE\src\ImageImporter.sln
     
     - name: Build DotNET35
       run: |        
         cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-        .\MSBuild.exe $Env:GITHUB_WORKSPACE\ImageDownloader\ImageImporter.sln /t:Compile /p:Configuration=Release
+        .\MSBuild.exe $Env:GITHUB_WORKSPACE\src\ImageImporter.sln /t:Compile /p:Configuration=Release
