update build environment to use dotnetcore

--- a/workflows/azure/build-only.yml
+++ b/workflows/azure/build-only.yml
@@ -1,9 +1,3 @@
-# .NET Desktop
-
-# Build and run tests for .NET Desktop or Windows classic desktop solutions.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
-
 trigger:
     branches:
         include:
@@ -18,26 +12,14 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: UseDotNet@2
+- task: DotNetCoreCLI@2
   inputs:
-    packageType: 'sdk'
-    version: '2.2.x'
-    
-- task: NuGetToolInstaller@0
+    command: 'restore'
+    projects: '$(solution)'
+    feedsToUse: 'select'
+    vstsFeed: 'b33f3216-3cef-4872-a4b5-f8934534ed42'
+  
+- task: DotNetCoreCLI@2
   inputs:
-    versionSpec: '4.4.1'
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'test'
+    projects: '$(solution)'
