update release pipeline

--- a/workflows/azure/create-release.yml
+++ b/workflows/azure/create-release.yml
@@ -22,28 +22,17 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-- task: NuGetToolInstaller@1
+- task: DotNetCoreCLI@2
   inputs:
-    versionSpec: '4.4.1'
-
-- task: VisualStudioTestPlatformInstaller@1
+    command: 'restore'
+    projects: '$(solution)'
+    feedsToUse: 'select'
+    vstsFeed: 'b33f3216-3cef-4872-a4b5-f8934534ed42'
+  
+- task: DotNetCoreCLI@2
   inputs:
-    packageFeedSelector: 'nugetOrg'
-    versionSelector: 'latestStable'
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'test'
+    projects: '$(solution)'
 
 - task: CopyFiles@2
   inputs:
