--- a/src/ImageDownloader.TagManagement/ImageDownloader.TagManagement.csproj
+++ b/src/ImageDownloader.TagManagement/ImageDownloader.TagManagement.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MetadataExtractor" Version="2.4.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.1" />
+  </ItemGroup>
+  
 </Project>
