--- a/src/ImageDownloader.Cli/ImageDownloader.Cli.csproj
+++ b/src/ImageDownloader.Cli/ImageDownloader.Cli.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+  <PackageReference Include="ShellProgressBar" Version="5.0.0" />
+  <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ImageDownloader.Core\ImageDownloader.Core.csproj" />
+    <ProjectReference Include="..\ImageDownloader.InputHandling\ImageDownloader.InputHandling.csproj" />
+  </ItemGroup>
+  
 </Project>
